[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpm-timecoded-buffer"
version = "0.7.2"
description = "BPM Timecoded Buffer — Daydream Scope plugin, part of OpticMystic's VJ.Tools collection. Stamps beat-grid timecodes using Ableton Link, preserves them through AI generation via VACE masking. ControlNet preprocessing (canny, depth, scribble). BCH error-corrected barcode survives diffusion for beat-accurate output timing."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]
license = { text = "MIT" }
authors = [{ name = "OpticMystic" }]
keywords = ["vj", "vjing", "ableton-link", "timecode", "scope", "daydream", "vace", "barcode"]

[project.optional-dependencies]
link = ["aalink>=0.2.0"]
dev = ["pytest>=7.0.0"]

[project.entry-points."scope"]
bpm_timecoded_buffer = "bpm_timecoded_buffer.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/bpm_timecoded_buffer"]
